Resolve paliativamente o wrap no block das tags

--- a/components/Tags/index.scss
+++ b/components/Tags/index.scss
@@ -4,7 +4,13 @@
   @include w(max-content);
   @include px(20px);
   @include py(12px);
+  @include mr(20px);
+  @include mb(16px);
   @include b(2px, solid, $color-primary-2);
   @include r(3px);
   cursor: pointer;
+}
+
+.wrap {
+  flex-wrap: wrap;
 }
